[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/enemies/zombie/zombie_1.png" type="Texture" id=1]
[ext_resource path="res://sprites/enemies/zombie/zombie_2.png" type="Texture" id=2]
[ext_resource path="res://sprites/enemies/zombie/zombie_0.png" type="Texture" id=3]
[ext_resource path="res://sprites/enemies/zombie/zombie_dead.png" type="Texture" id=4]
[ext_resource path="res://sprites/enemies/blood_splatter.png" type="Texture" id=5]
[ext_resource path="res://sounds/9mm.wav" type="AudioStream" id=7]
[ext_resource path="res://scripts/Enemy.gd" type="Script" id=9]
[ext_resource path="res://sounds/hitbody.wav" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.3705, 27 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "Dead",
"speed": 12.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "Walk",
"speed": 7.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "Idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Crushed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 110, 37 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
shape = SubResource( 1 )

[node name="EnemyAnimation" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Idle"
playing = true

[node name="Position2D" type="Position2D" parent="."]
visible = false
position = Vector2( 16, -17 )

[node name="GunSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 16, -16 )
enabled = true

[node name="Upside2D" type="RayCast2D" parent="."]
position = Vector2( 16, -17 )
rotation = 3.14159
enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 11 )
volume_db = -15.0

[node name="Area2D" type="Area2D" parent="."]

[node name="DetectionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Proximity" type="Area2D" parent="."]
visible = false

[node name="ProximityShape2D" type="CollisionShape2D" parent="Proximity"]
shape = SubResource( 3 )
[connection signal="animation_finished" from="EnemyAnimation" to="." method="_on_PlayerAnimation_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Proximity" to="." method="_on_Proximity_body_entered"]
[connection signal="body_exited" from="Proximity" to="." method="_on_Proximity_body_exited"]
